	Added permission:
		towny.spawntp (To let a player use /town spawn [town] even when ALLOW_TOWN_SPAWN_TRAVEL=false)
v0.19:
	Forgot to override with build and switch for wild ignore blocks.
	Moved all timers to Bukkits Scheduler.
	Bug fixes for war.
v0.20:
	Quick fix for town notifications.
v0.21:
	Resident permissions are persistent.
	Added add+/remove+ to select offline residents.
v0.22:
	Nation server upkeep is now taken. 
	Added command /townyworld (/tw) to manage worlds.
	You can now set world PvP, and if a world is claimable.
	The slightly spammy messages during war have been filtered to show every 10 damage. They can be viewed with the modes "wardef" and "waratk".
	Added modes "tc" and "nc" to talk in a particular chat without typing /tc [msg], etc.
	Created Long config values. "Deleted after time" was overflowing int.
	Added to world options, isDefault (use default settings in config), as well as per world permissions, ignore ids, and unclaimed zone names.
	Fixed MobRemoval.
	Moved some help commands around.
v0.23:
	Updated Essentials extensibility to use the proper plugin.
	Added option to disable removing a town/nation on monarch death.
	Small grammar edit for when setting permissions.
v0.24:
	Fixed the logic error with loading permissions.
v0.25:
	Finished TownyWorld commands.
v0.26:
	All damage within non PvP zones is negated.
	Update for latest API change.
v0.27:
	Mayor's can no longer leave the town (must choose a replacement first).
	Changed a few config names DATABASE_LOAD, DATABASE_SAVE
	Flatfile backup is is now zipping the entire Towny folder. 3 options now in config flatfile_backup = [zip/folder/none].
v0.28:
	Ability to convert from hMod database. http://towny.xshade.ca/help/converting-from-hmod
	Possible fix for permission persistency bug.
	Logic error where town mayor and assistents where charged taxes.
	
TODO:	
	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc